# llm-rpg-kling

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: game_config.yaml  game_config_good.yaml
src/llm_rpg/: __main__.py  main.py
src/llm_rpg/game/: game.py  game_config.py
src/llm_rpg/graphics/: renderer.py
src/llm_rpg/llm/: llm.py  llm_cost_tracker.py
src/llm_rpg/objects/: character.py  item.py
src/llm_rpg/scenes/: factory.py  scene.py  state.py
src/llm_rpg/scenes/battle/: battle.py  battle_ai.py  battle_log.py  battle_scene.py  damage_calculator.py
src/llm_rpg/scenes/battle/battle_states/: battle_end_state.py  battle_start_state.py  battle_state.py  battle_states.py  battle_turn_state.py
src/llm_rpg/scenes/game_over/: game_over_scene.py
src/llm_rpg/scenes/game_over/game_over_states/: game_over_end_screen_state.py  game_over_states.py
src/llm_rpg/scenes/hero_creation/: hero_creation_scene.py
src/llm_rpg/scenes/hero_creation/hero_creation_states/: hero_creation_choose_class_state.py  (+2 more)
src/llm_rpg/scenes/manage_character/: manage_character_scene.py
src/llm_rpg/scenes/resting_hub/: resting_hub_scene.py
src/llm_rpg/scenes/shop/: shop_scene.py
src/llm_rpg/systems/battle/: battle_ai.py  battle_log.py  creativity_tracker.py  damage_calculator.py  difficulty_scaling.py  enemy.py  enemy_generator.py  enemy_scaling.py
src/llm_rpg/systems/economy/: shop.py
src/llm_rpg/systems/hero/: hero.py  inventory.py
src/llm_rpg/utils/: rendering.py  timer.py  user_navigation_input.py
(+15 files in other folders)
